@@ -16,16 +16,22 @@
 
 package ratpack.pac4j;
 
+import static java.util.Arrays.asList;
+
 import com.google.common.collect.ImmutableList;
+import java.util.List;
+import java.util.Optional;
 import org.pac4j.core.authorization.authorizer.Authorizer;
 import org.pac4j.core.client.Client;
 import org.pac4j.core.client.Clients;
 import org.pac4j.core.client.DirectClient;
 import org.pac4j.core.context.WebContext;
-import org.pac4j.core.credentials.Credentials;
-import org.pac4j.core.exception.HttpAction;
 import org.pac4j.core.exception.TechnicalException;
+import org.pac4j.core.exception.http.HttpAction;
+import org.pac4j.core.exception.http.RedirectionAction;
+import org.pac4j.core.exception.http.WithLocationAction;
 import org.pac4j.core.profile.CommonProfile;
+import org.pac4j.core.profile.UserProfile;
 import ratpack.exec.Blocking;
 import ratpack.exec.Downstream;
 import ratpack.exec.Operation;
@@ -41,28 +47,23 @@ import ratpack.pac4j.internal.Pac4jSessionKeys;
 import ratpack.pac4j.internal.RatpackWebContext;
 import ratpack.path.PathBinding;
 import ratpack.registry.Registry;
-import ratpack.session.Session;
 import ratpack.util.Types;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
-import static java.util.Arrays.asList;
 
 /**
  * Provides integration with the <a href="http://www.pac4j.org">Pac4j library</a> for authentication and authorization.
  * <p>
- * Pac4j support many different authentication providers, such as external sources like GitHub, Twitter, Facebook etc., as well
- * as proprietary local authentication sources.
+ * Pac4j support many different authentication providers, such as external sources like GitHub, Twitter, Facebook etc.,
+ * as well as proprietary local authentication sources.
  * <p>
- * The {@link #authenticator(Client[])} method provides a handler that implements the authentication process,
- * and is required in all apps wanting to use authentication.
+ * The {@link #authenticator(Client[])} method provides a handler that implements the authentication process, and is
+ * required in all apps wanting to use authentication.
  * <p>
- * The {@link #requireAuth(Class, Authorizer...)} method provides a handler that acts like a filter, ensuring that the user is authenticated for all requests.
- * This can be used for requiring authentication for all requests starting with a particular request path for example.
+ * The {@link #requireAuth(Class, Authorizer...)} method provides a handler that acts like a filter, ensuring that the
+ * user is authenticated for all requests. This can be used for requiring authentication for all requests starting with
+ * a particular request path for example.
  * <p>
- * The {@link #userProfile(Context)}, {@link #login(Context, Class)} and {@link #logout(Context)} methods provide programmatic authentication mechanisms.
+ * The {@link #userProfile(Context)}, {@link #login(Context, Class)} and {@link #logout(Context)} methods provide
+ * programmatic authentication mechanisms.
  */
 public class RatpackPac4j {
 
@@ -80,50 +81,44 @@ public class RatpackPac4j {
    * @param clients the supported auth clients
    * @return a handler
    */
-  public static Handler authenticator(Client<?, ?>... clients) {
+  public static Handler authenticator(Client... clients) {
     return authenticator(DEFAULT_AUTHENTICATOR_PATH, clients);
   }
 
   /**
-   * Creates a handler that implements authentication when the request path matches, and makes a Pac4j {@link Clients} available to downstream handlers otherwise.
+   * Creates a handler that implements authentication when the request path matches, and makes a Pac4j {@link Clients}
+   * available to downstream handlers otherwise.
    * <p>
-   * This methods performs the same function as {@link #authenticator(String, ClientsProvider)},
-   * but is more convenient to use when the {@link Client} instances do not depend on the request environment.
+   * This methods performs the same function as {@link #authenticator(String, ClientsProvider)}, but is more convenient
+   * to use when the {@link Client} instances do not depend on the request environment.
    *
    * @param path the path to bind the authenticator to (relative to the current request path binding)
    * @param clients the supported authentication clients
    * @return a handler
    */
-  public static Handler authenticator(String path, Client<?, ?>... clients) {
-    ImmutableList<Client<?, ?>> clientList = ImmutableList.copyOf(clients);
+  public static Handler authenticator(String path, Client... clients) {
+    ImmutableList<Client> clientList = ImmutableList.copyOf(clients);
     return authenticator(path, ctx -> clientList);
   }
 
   /**
-   * Provides the set of Pac4j {@link Client clients}.
-   *
-   * @see #authenticator(String, ClientsProvider)
-   * @since 1.1
-   */
-  public interface ClientsProvider {
-    Iterable<? extends Client<?, ?>> get(Context ctx);
-  }
-
-  /**
-   * Creates a handler that implements authentication when the request path matches, and makes a Pac4j {@link Clients} available to downstream handlers otherwise.
+   * Creates a handler that implements authentication when the request path matches, and makes a Pac4j {@link Clients}
+   * available to downstream handlers otherwise.
    * <p>
-   * This handler <b>MUST</b> be <b>BEFORE</b> any code in the handler pipeline that tries to identify the user, such as a {@link #requireAuth} handler in the pipeline.
-   * It should be added to the handler chain via the {@link Chain#all(Handler)}.
-   * That is, it should not be added with {@link Chain#get(Handler)} or any method that filters based on request method.
-   * It is common for this handler to be one of the first handlers in the pipeline.
+   * This handler <b>MUST</b> be <b>BEFORE</b> any code in the handler pipeline that tries to identify the user, such as
+   * a {@link #requireAuth} handler in the pipeline. It should be added to the handler chain via the {@link
+   * Chain#all(Handler)}. That is, it should not be added with {@link Chain#get(Handler)} or any method that filters
+   * based on request method. It is common for this handler to be one of the first handlers in the pipeline.
    * <p>
-   * This handler performs two different functions, based on whether the given path matches the {@link PathBinding#getPastBinding()} component of the current path binding.
-   * If the path matches, the handler will attempt authentication, which may involve redirecting to an external auth provider, which may then redirect back to this handler.
-   * If authentication is successful, the {@link CommonProfile} of the authenticated user will be placed into the session.
-   * The user will then be redirected back to the URL that initiated the authentication.
+   * This handler performs two different functions, based on whether the given path matches the {@link
+   * PathBinding#getPastBinding()} component of the current path binding. If the path matches, the handler will attempt
+   * authentication, which may involve redirecting to an external auth provider, which may then redirect back to this
+   * handler. If authentication is successful, the {@link CommonProfile} of the authenticated user will be placed into
+   * the session. The user will then be redirected back to the URL that initiated the authentication.
    * <p>
-   * If the path does not match, the handler will push an instance of {@link Clients} into the context registry and pass control downstream.
-   * The {@link Clients} instance will be retrieved downstream by any {@link #requireAuth(Class, Authorizer...)} handler (or use of {@link #login(Context, Class)}.
+   * If the path does not match, the handler will push an instance of {@link Clients} into the context registry and pass
+   * control downstream. The {@link Clients} instance will be retrieved downstream by any {@link #requireAuth(Class,
+   * Authorizer...)} handler (or use of {@link #login(Context, Class)}.
    *
    * @param path the path to bind the authenticator to (relative to the current request path binding)
    * @param clientsProvider the provider of authentication clients
@@ -136,17 +131,19 @@ public class RatpackPac4j {
   /**
    * An authentication and authorization “filter”.
    * <p>
-   * This handler can be used to ensure that a user profile is available for all downstream handlers.
-   * If there is no user profile present in the session (i.e. user not logged in), authentication will be initiated based on the given client type (i.e. redirect to the {@link #authenticator(Client[])} handler).
-   * If there is a {@link CommonProfile} present in the session, this handler will push the user profile into the context registry before delegating downstream.
-   * If there is a {@link CommonProfile} present in the context registry, this handler will simply delegate downstream.
+   * This handler can be used to ensure that a user profile is available for all downstream handlers. If there is no
+   * user profile present in the session (i.e. user not logged in), authentication will be initiated based on the given
+   * client type (i.e. redirect to the {@link #authenticator(Client[])} handler). If there is a {@link CommonProfile}
+   * present in the session, this handler will push the user profile into the context registry before delegating
+   * downstream. If there is a {@link CommonProfile} present in the context registry, this handler will simply delegate
+   * downstream.
    * <p>
-   * If there is a {@link CommonProfile}, <b>each</b> of the given authorizers will be tested in turn and all must return true.
-   * If so, control will flow to the next handler.
-   * Otherwise, a {@code 403} {@link Context#clientError(int) client error} will be issued.
+   * If there is a {@link CommonProfile}, <b>each</b> of the given authorizers will be tested in turn and all must
+   * return true. If so, control will flow to the next handler. Otherwise, a {@code 403} {@link Context#clientError(int)
+   * client error} will be issued.
    * <p>
-   * This handler requires a {@link Clients} instance available in the context registry.
-   * As such, this handler should be downstream of the {@link #authenticator(Client[])} handler.
+   * This handler requires a {@link Clients} instance available in the context registry. As such, this handler should be
+   * downstream of the {@link #authenticator(Client[])} handler.
    *
    * <pre class="java">{@code
    * import org.pac4j.core.profile.UserProfile;
@@ -197,14 +194,10 @@ public class RatpackPac4j {
    *
    * @param clientType the client type to use to authenticate with if required
    * @param authorizers the authorizers to check authorizations
-   * @param <C> client class
-   * @param <U> user profile class
    * @return a handler
    */
-  @SafeVarargs
-  @SuppressWarnings("varargs")
-  public static <C extends Credentials, U extends CommonProfile> Handler requireAuth(Class<? extends Client> clientType, Authorizer<? super U>... authorizers) {
-    List<Authorizer<? super U>> authorizerList = asList(authorizers);
+  public static Handler requireAuth(Class<? extends Client> clientType, Authorizer... authorizers) {
+    List<Authorizer> authorizerList = asList(authorizers);
     return ctx -> RatpackPac4j.login(ctx, clientType).then(userProfile -> {
       if (authorizerList.isEmpty()) {
         ctx.next(Registry.single(userProfile));
@@ -213,7 +206,7 @@ public class RatpackPac4j {
           try {
             boolean authorized = true;
             for (Authorizer a : authorizerList) {
-              if (a != null && !a.isAuthorized(webContext, Arrays.asList(userProfile))) {
+              if (a != null && !a.isAuthorized(webContext, webContext.getSessionStore(), List.of(userProfile))) {
                 authorized = false;
                 break;
               }
@@ -231,78 +224,74 @@ public class RatpackPac4j {
     });
   }
 
-    /**
-     * Logs the user in by redirecting to the authenticator, or provides the user profile if already logged in.
-     * <p>
-     * This method can be used to programmatically initiate a log in, if required.
-     * If the user is already logged in, the user profile will be provided via the returned promise.
-     * If the user is not already logged in, the promise will not be fulfilled and the user will be redirected to the authenticator.
-     * As such, like {@link #requireAuth(Class, Authorizer...)}, this can only be used downstream of the {@link #authenticator(Client[])} handler.
-     *
-     * <pre class="java">{@code
-     * import org.pac4j.http.client.indirect.IndirectBasicAuthClient;
-     * import org.pac4j.http.credentials.authenticator.test.SimpleTestUsernamePasswordAuthenticator;
-     * import ratpack.guice.Guice;
-     * import ratpack.http.client.ReceivedResponse;
-     * import ratpack.pac4j.RatpackPac4j;
-     * import ratpack.session.SessionModule;
-     * import ratpack.test.embed.EmbeddedApp;
-     *
-     * import java.util.Optional;
-     *
-     * import static org.junit.Assert.assertEquals;
-     *
-     * public class Example {
-     *   public static void main(String... args) throws Exception {
-     *     EmbeddedApp.of(s -> s
-     *         .registry(Guice.registry(b -> b.module(SessionModule.class)))
-     *         .handlers(c -> c
-     *             .all(RatpackPac4j.authenticator(new IndirectBasicAuthClient(new SimpleTestUsernamePasswordAuthenticator())))
-     *             .get("auth", ctx -> RatpackPac4j.login(ctx, IndirectBasicAuthClient.class).then(p -> ctx.redirect("/")))
-     *             .get(ctx ->
-     *                 RatpackPac4j.userProfile(ctx)
-     *                   .route(Optional::isPresent, p -> ctx.render("Hello " + p.get().getId()))
-     *                   .then(p -> ctx.render("not authenticated"))
-     *             )
-     *         )
-     *     ).test(httpClient -> {
-     *       // user is not authenticated
-     *       assertEquals("not authenticated", httpClient.getText());
-     *
-     *       // authenticate…
-     *       ReceivedResponse response = httpClient.requestSpec(r -> r.basicAuth("user", "user")).get("auth");
-     *
-     *       // authenticated (redirected to /)
-     *       assertEquals("Hello user", response.getBody().getText());
-     *     });
-     *   }
-     * }
-     * }</pre>
-     *
-     * @param ctx the handling context
-     * @param clientType the client type to authenticate with
-     * @param <C> client class
-     * @param <U> user profile class
-     * @return a promise for the user profile, fulfilled if logged in
-     */
-  public static <C extends Credentials, U extends CommonProfile> Promise<U> login(Context ctx, Class<? extends Client> clientType) {
+  /**
+   * Logs the user in by redirecting to the authenticator, or provides the user profile if already logged in.
+   * <p>
+   * This method can be used to programmatically initiate a log in, if required. If the user is already logged in, the
+   * user profile will be provided via the returned promise. If the user is not already logged in, the promise will not
+   * be fulfilled and the user will be redirected to the authenticator. As such, like {@link #requireAuth(Class,
+   * Authorizer...)}, this can only be used downstream of the {@link #authenticator(Client[])} handler.
+   *
+   * <pre class="java">{@code
+   * import org.pac4j.http.client.indirect.IndirectBasicAuthClient;
+   * import org.pac4j.http.credentials.authenticator.test.SimpleTestUsernamePasswordAuthenticator;
+   * import ratpack.guice.Guice;
+   * import ratpack.http.client.ReceivedResponse;
+   * import ratpack.pac4j.RatpackPac4j;
+   * import ratpack.session.SessionModule;
+   * import ratpack.test.embed.EmbeddedApp;
+   *
+   * import java.util.Optional;
+   *
+   * import static org.junit.Assert.assertEquals;
+   *
+   * public class Example {
+   *   public static void main(String... args) throws Exception {
+   *     EmbeddedApp.of(s -> s
+   *         .registry(Guice.registry(b -> b.module(SessionModule.class)))
+   *         .handlers(c -> c
+   *             .all(RatpackPac4j.authenticator(new IndirectBasicAuthClient(new SimpleTestUsernamePasswordAuthenticator())))
+   *             .get("auth", ctx -> RatpackPac4j.login(ctx, IndirectBasicAuthClient.class).then(p -> ctx.redirect("/")))
+   *             .get(ctx ->
+   *                 RatpackPac4j.userProfile(ctx)
+   *                   .route(Optional::isPresent, p -> ctx.render("Hello " + p.get().getId()))
+   *                   .then(p -> ctx.render("not authenticated"))
+   *             )
+   *         )
+   *     ).test(httpClient -> {
+   *       // user is not authenticated
+   *       assertEquals("not authenticated", httpClient.getText());
+   *
+   *       // authenticate…
+   *       ReceivedResponse response = httpClient.requestSpec(r -> r.basicAuth("user", "user")).get("auth");
+   *
+   *       // authenticated (redirected to /)
+   *       assertEquals("Hello user", response.getBody().getText());
+   *     });
+   *   }
+   * }
+   * }</pre>
+   *
+   * @param ctx the handling context
+   * @param clientType the client type to authenticate with
+   * @return a promise for the user profile, fulfilled if logged in
+   */
+  public static Promise<UserProfile> login(Context ctx, Class<? extends Client> clientType) {
     if (isDirect(clientType)) {
       return userProfile(ctx)
-        .flatMap(p -> {
-          if (p.isPresent()) {
-            Optional<U> cast = Types.cast(p);
-            return Promise.value(cast);
-          } else {
-            return performDirectAuthentication(ctx, clientType);
-          }
-        })
-        .route(p -> !p.isPresent(), p -> ctx.clientError(401))
-        .map(Optional::get);
+          .flatMap(p -> {
+            if (p.isPresent()) {
+              return Promise.value(p);
+            } else {
+              return performDirectAuthentication(ctx, clientType);
+            }
+          })
+          .route(p -> !p.isPresent(), p -> ctx.clientError(401))
+          .map(Optional::get);
     } else {
       return userProfile(ctx)
-        .route(p -> !p.isPresent(), p -> initiateAuthentication(ctx, clientType))
-        .map(Optional::get)
-        .map(Types::<U>cast);
+          .route(p -> !p.isPresent(), p -> initiateAuthentication(ctx, clientType))
+          .map(Optional::get);
     }
   }
 
@@ -311,12 +300,12 @@ public class RatpackPac4j {
    * <p>
    * The promised optional will be empty if the user is not authenticated.
    * <p>
-   * This method should be used if the user <i>may</i> have been authenticated.
-   * That is, when the the need for the profile is not downstream of an {@link #requireAuth(Class, Authorizer...)} handler,
-   * as the auth handler puts the profile into the context registry for easy retrieval.
+   * This method should be used if the user <i>may</i> have been authenticated. That is, when the the need for the
+   * profile is not downstream of an {@link #requireAuth(Class, Authorizer...)} handler, as the auth handler puts the
+   * profile into the context registry for easy retrieval.
    * <p>
-   * This method returns a promise as it will attempt to load the profile from the session if it
-   * isn't already in the context registry.
+   * This method returns a promise as it will attempt to load the profile from the session if it isn't already in the
+   * context registry.
    *
    * <pre class="java">{@code
    * import io.netty.handler.codec.http.HttpHeaderNames;
@@ -381,23 +370,24 @@ public class RatpackPac4j {
    * @return a promise for the user profile
    * @see #userProfile(Context, Class)
    */
-  public static Promise<Optional<CommonProfile>> userProfile(Context ctx) {
-    return userProfile(ctx, CommonProfile.class);
+  public static Promise<Optional<UserProfile>> userProfile(Context ctx) {
+    //TODO take a class here?
+    return userProfile(ctx, UserProfile.class);
   }
 
   /**
    * Obtains the logged in user's profile, of the given type, if the user is logged in.
    * <p>
-   * The promised optional will be empty if the user is not authenticated.
-   * If there exists a {@link CommonProfile} for the current user but it is not compatible with the requested type,
-   * the returned promise will be a failure with a {@link ClassCastException}.
+   * The promised optional will be empty if the user is not authenticated. If there exists a {@link CommonProfile} for
+   * the current user but it is not compatible with the requested type, the returned promise will be a failure with a
+   * {@link ClassCastException}.
    * <p>
-   * This method should be used if the user <i>may</i> have been authenticated.
-   * That is, when the the need for the profile is not downstream of an {@link #requireAuth(Class, Authorizer...)} handler,
-   * as the auth handler puts the profile into the context registry for easy retrieval.
+   * This method should be used if the user <i>may</i> have been authenticated. That is, when the the need for the
+   * profile is not downstream of an {@link #requireAuth(Class, Authorizer...)} handler, as the auth handler puts the
+   * profile into the context registry for easy retrieval.
    * <p>
-   * This method returns a promise as it will attempt to load the profile from the session if it
-   * isn't already in the context registry.
+   * This method returns a promise as it will attempt to load the profile from the session if it isn't already in the
+   * context registry.
    *
    * @param ctx the handling context
    * @param type the type of the user profile
@@ -405,25 +395,23 @@ public class RatpackPac4j {
    * @return a promise for the user profile
    * @see #userProfile(Context)
    */
-  public static <T extends CommonProfile> Promise<Optional<T>> userProfile(Context ctx, Class<T> type) {
+  public static <T extends UserProfile> Promise<Optional<T>> userProfile(Context ctx, Class<T> type) {
     return Promise.async(f ->
-      toProfile(type, f, ctx.maybeGet(CommonProfile.class), () ->
-        ctx.get(Session.class)
-          .get(Pac4jSessionKeys.USER_PROFILE)
-          .then(p -> {
-            if (p.isPresent()) {
-              ctx.getRequest().add(UserId.class, UserId.of(p.get().getId()));
-            }
-            toProfile(type, f, p, () -> f.success(Optional.<T>empty()));
-          })
-      )
+        toProfile(type, f, ctx.maybeGet(UserProfile.class), () ->
+            webContext(ctx).map((c) -> c.getProfileManager().getProfile())
+                .then(p -> {
+                  p.ifPresent(commonProfile -> ctx.getRequest().add(UserId.class, UserId.of(commonProfile.getId())));
+                  toProfile(type, f, p, () -> f.success(Optional.<T>empty()));
+                })
+        )
     );
   }
 
   /**
    * Logs out the current user, removing their profile from the session.
    * <p>
-   * The returned operation simply removes the profile from the session, regardless of whether it's actually there or not.
+   * The returned operation simply removes the profile from the session, regardless of whether it's actually there or
+   * not.
    *
    * <pre class="java">{@code
    * import org.pac4j.http.client.indirect.IndirectBasicAuthClient;
@@ -475,32 +463,32 @@ public class RatpackPac4j {
    * @return the logout operation
    */
   public static Operation logout(Context ctx) {
-    return ctx.get(Session.class)
-      .remove(Pac4jSessionKeys.USER_PROFILE);
+    return webContext(ctx).operation(c -> c.getProfileManager().removeProfiles());
   }
 
   /**
    * Adapts a Ratpack {@link Context} to a Pac4j {@link WebContext}.
    * <p>
-   * The returned WebContext does not have access to the request body.
-   * {@link WebContext#getRequestParameters()} and associated methods will not include any
-   * form parameters if the request was a form.
+   * The returned WebContext does not have access to the request body. {@link WebContext#getRequestParameters()} and
+   * associated methods will not include any form parameters if the request was a form.
    *
    * @param ctx a Ratpack context
    * @return a Pac4j web context
    * @since 1.4
    */
-  public static Promise<WebContext> webContext(Context ctx) {
+  public static Promise<RatpackWebContext> webContext(Context ctx) {
     return Types.cast(RatpackWebContext.from(ctx, false));
   }
 
-  private static <T extends CommonProfile> void toProfile(Class<T> type, Downstream<? super Optional<T>> downstream, Optional<CommonProfile> userProfileOptional, Block onEmpty) throws Exception {
+  private static <T extends UserProfile> void toProfile(Class<T> type, Downstream<? super Optional<T>> downstream,
+      Optional<UserProfile> userProfileOptional, Block onEmpty) throws Exception {
     if (userProfileOptional.isPresent()) {
-      final CommonProfile userProfile = userProfileOptional.get();
+      final UserProfile userProfile = userProfileOptional.get();
       if (type.isInstance(userProfile)) {
         downstream.success(Optional.of(type.cast(userProfile)));
       } else {
-        downstream.error(new ClassCastException("UserProfile is of type " + userProfile.getClass() + ", and is not compatible with " + type));
+        downstream.error(new ClassCastException(
+            "UserProfile is of type " + userProfile.getClass() + ", and is not compatible with " + type));
       }
     } else {
       onEmpty.execute();
@@ -510,39 +498,54 @@ public class RatpackPac4j {
   private static void initiateAuthentication(Context ctx, Class<? extends Client> clientType) {
     Request request = ctx.getRequest();
     Clients clients = ctx.get(Clients.class);
-    Client<?, ?> client = clients.findClient(clientType);
+    Client client = clients.findClient(clientType).get();
 
     RatpackWebContext.from(ctx, false).then(webContext -> {
       webContext.getSessionStore().set(webContext, Pac4jSessionKeys.REQUESTED_URL.getName(), request.getUri());
       try {
-        client.redirect(webContext);
+        Optional<RedirectionAction> redirect = client.getRedirectionAction(webContext, webContext.getSessionStore());
+        if (redirect.isPresent() && redirect.get() instanceof WithLocationAction) {
+          ctx.redirect(((WithLocationAction) redirect.get()).getLocation());
+        } else {
+          ctx.error(new TechnicalException("Failed to redirect"));
+          webContext.sendResponse();
+        }
       } catch (Exception e) {
         if (e instanceof HttpAction) {
           webContext.sendResponse((HttpAction) e);
-          return;
         } else {
           ctx.error(new TechnicalException("Failed to redirect", e));
         }
       }
-
-      webContext.sendResponse();
     });
   }
 
-  private static <C extends Credentials, U extends CommonProfile> Promise<Optional<U>> performDirectAuthentication(Context ctx, Class<? extends Client> clientType) {
+  private static Promise<Optional<UserProfile>> performDirectAuthentication(Context ctx,
+      Class<? extends Client> clientType) {
     return RatpackWebContext.from(ctx, false).flatMap(webContext ->
-      Blocking.get(() -> {
-        Clients clients = ctx.get(Clients.class);
-        Client<C, U> client = clients.findClient(clientType);
-        return userProfileFromCredentials(client, webContext);
-      })
+        Blocking.get(() -> {
+          Clients clients = ctx.get(Clients.class);
+          return clients.findClient(clientType).flatMap(client -> userProfileFromCredentials(client, webContext));
+        })
     );
   }
 
-  private static <C extends Credentials, U extends CommonProfile> Optional<U> userProfileFromCredentials(Client<C, U> client, RatpackWebContext webContext) throws HttpAction {
-    C credentials = client.getCredentials(webContext);
-    U userProfile = client.getUserProfile(credentials, webContext);
-    return Optional.ofNullable(userProfile);
+  private static Optional<UserProfile> userProfileFromCredentials(Client client, RatpackWebContext webContext)
+      throws HttpAction {
+    return client.getCredentials(webContext, webContext.getSessionStore()).flatMap(
+        credentials -> client.getUserProfile(credentials, webContext, webContext.getSessionStore())
+    );
+  }
+
+  /**
+   * Provides the set of Pac4j {@link Client clients}.
+   *
+   * @see #authenticator(String, ClientsProvider)
+   * @since 1.1
+   */
+  public interface ClientsProvider {
+
+    Iterable<? extends Client> get(Context ctx);
   }
 
   private static boolean isDirect(Class<? extends Client> clientType) {
